<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/smite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:tag="@string/smite"
            android:onClick="onClickDialogImage"
            app:srcCompat="@drawable/smite" />

        <ImageView
            android:id="@+id/ghost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:tag="@string/ghost"
            android:onClick="onClickDialogImage"
            app:srcCompat="@drawable/ghost" />

        <ImageView
            android:id="@+id/heal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:tag="@string/heal"
            android:onClick="onClickDialogImage"
            app:srcCompat="@drawable/heal" />

        <ImageView
            android:id="@+id/teleport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:tag="@string/teleport"
            android:onClick="onClickDialogImage"
            app:srcCompat="@drawable/teleport" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cleanse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:tag="@string/cleanse"
            android:onClick="onClickDialogImage"
            app:srcCompat="@drawable/cleanse" />

        <ImageView
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:tag="@string/barrier"
            android:onClick="onClickDialogImage"
            app:srcCompat="@drawable/barrier" />

        <ImageView
            android:id="@+id/ignite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:tag="@string/ignite"
            android:onClick="onClickDialogImage"
            app:srcCompat="@drawable/ignite" />

        <ImageView
            android:id="@+id/exhaust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:tag="@string/exhaust"
            android:onClick="onClickDialogImage"
            app:srcCompat="@drawable/exhaust" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:tag="@string/flash"
            android:onClick="onClickDialogImage"
            app:srcCompat="@drawable/flash" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:onClick="onClickDialogImage"
            android:visibility="invisible"
            app:srcCompat="@drawable/flash" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:onClick="onClickDialogImage"
            android:visibility="invisible"
            app:srcCompat="@drawable/flash" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:onClick="onClickDialogImage"
            android:visibility="invisible"
            app:srcCompat="@drawable/flash" />
    </LinearLayout>
</LinearLayout>